# iptc

./: .gitignore  Cargo.toml  README.md
examples/: read_tags.rs
src/: jpeg.rs  lib.rs  reader.rs  tags.rs  tiff.rs
tests/: jpeg-read.rs  jpeg-write.rs  smiley.rs  tiff.rs
