[package]
name = "iptc"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Read IPTC tags from JPEG files, in pure Rust."
homepage = "https://github.com/alvinometric/iptc"
repository = "https://github.com/alvinometric/iptc"
readme = "README.md"

[dependencies]
image = "0.25.5"
strum_macros = "0.27.1"
