[package]
name = "iptc"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Read IPTC tags from JPEG files in pure Rust, with partial support for Tiff files."
homepage = "https://github.com/alvinometric/iptc"
repository = "https://github.com/alvinometric/iptc"
readme = "README.md"

exclude = ["tests"]

[dependencies]
image = "0.25.6"
strum_macros = "0.27.1"
tiff = "0.9.1"
xml-rs = "0.8.25"
